# frontiers-demonstrations

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Euler_1D/: CMakeLists.txt  plot_sod.py  population_density.c
Population/: CMakeLists.txt  plot_population.py  plot_population_finalTimeStep.py  population_density.cpp  population_density_imex.cpp  population_imex.cpp  refSoln_k0pt02_h0pt01_ssp423.txt  refSoln_k0pt04_h0pt01_ssp423.txt  run-all-population-tests.sh  runtest_population_adaptLog.py  runtest_population_imex.py  runtest_population_refSol.py  runtests_population_adaptiveLog.py  runtests_population_density_imex.py
advection/: CMakeLists.txt
hyperbolic_relaxation/: CMakeLists.txt  hyperbolic_relaxation.cpp  hyperbolic_relaxation.hpp  hyperbolic_relaxation_refSol.cpp  hyperbolic_relaxation_refSol.hpp  plot_hyperbolic_relaxation.py  run-all-hyperbolic-relaxation-tests.sh  runtests_hyperbolic_relaxation.py  runtests_hyperbolic_relaxation_refSol.py
linear_adv_rec/: CMakeLists.txt  advection_diffusion_reaction.cpp  advection_diffusion_reaction.hpp  linear_adv_rec.cpp  linear_adv_rec.py  linear_adv_rec_refSol.cpp  plot_linear_adv_rec.py  runtest_linear_adv_rec.py  runtests_linear_adv_rec.py  runtests_linear_adv_rec_refSol.py
linear_advection/: CMakeLists.txt  linear_advection.cpp  linear_advection.hpp  plot_advection.py  runtests_linear_advection.py
population/: CMakeLists.txt  plot_population.py  plot_population_finalStepSoln.py  population.cpp  population_refSoln.cpp  runtests_population.py  runtests_population_imex.py  runtests_population_refSol.py
